# metwork_nerge

./: .gitignore  New System.py  README.md  a.py  datamod.py  main.py  newsys.py  oldsys.py  requirements.txt  setup.py
nerge/: Cargo.toml  config.txt
nerge/input/: test.csv
nerge/src/: csv_interface.rs  csv_processor.rs  datamod.rs  layout_branch.rs  main.rs
old/: README.md  config.txt  newsys.py  requirements.txt
