[package]
name = "nerge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CSV Mod
polars = { version = "0.38.1", features = ["polars-io", "temporal"] }

# Logging
env_logger = "0.11.3"
log = "0.4.21"

# Config Loading
configparser = "3.0.0"
serde_json = "1.0.0"